feat: Integrate AWS Amplify for authentication
This commit introduces AWS Amplify to handle user authentication and session management.

Key changes include:
- Installing the `aws-amplify` package.
- Configuring Amplify with placeholder Cognito details.
- Implementing `authService` functions for login, registration, confirmation, password reset, and logout, leveraging Amplify's APIs.
- Modifying `App.tsx` to check for an existing user session on startup.
- Refactoring `components/Auth.tsx` to use the new `authService` for backend authentication flows, removing local mock logic.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
     "vite": "https://aistudiocdn.com/vite@^7.2.6",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
     "react/": "https://aistudiocdn.com/react@^19.2.1/",
-    "react": "https://aistudiocdn.com/react@^19.2.1"
+    "react": "https://aistudiocdn.com/react@^19.2.1",
+    "aws-amplify": "https://esm.sh/aws-amplify@6",
+    "aws-amplify/auth": "https://esm.sh/aws-amplify@6/auth",
+    "aws-amplify/": "https://esm.sh/aws-amplify@^6.15.9/"
   }
 }
 </script>
