feat: Remove unused Gemini AI chat functionality
The Gemini AI chat component and its associated services have been removed. This includes the AIChat component, geminiService, and related type definitions. The dependency in index.html has also been cleaned up.

--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
     "react": "https://aistudiocdn.com/react@^19.2.1",
     "aws-amplify": "https://esm.sh/aws-amplify@6",
     "aws-amplify/auth": "https://esm.sh/aws-amplify@6/auth",
-    "aws-amplify/": "https://esm.sh/aws-amplify@^6.15.9/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
+    "aws-amplify/": "https://esm.sh/aws-amplify@^6.15.9/"
   }
 }
 </script>
