--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Green Leaf Herbals | Pure & Organic Wellness</title>
+    <title>ShopNcarT | Your Global E-Commerce Hub</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -11,14 +11,14 @@
           extend: {
             colors: {
               primary: {
-                50: '#f0fdf4',
-                100: '#dcfce7',
-                500: '#22c55e',
-                600: '#16a34a',
-                700: '#15803d',
-                900: '#14532d',
+                50: '#eff6ff',
+                100: '#dbeafe',
+                500: '#3b82f6',
+                600: '#2563eb',
+                700: '#1d4ed8',
+                900: '#1e3a8a',
               },
-              brand: '#16a34a', // More of a forest herbal green
+              brand: '#3b82f6', // Changed to a clean blue for ShopNcarT
             }
           }
         }
