--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
               primary: {
                 50: '#eff6ff',
                 100: '#dbeafe',
+                200: '#bfdbfe',
+                300: '#93c5fd',
+                400: '#60a5fa',
                 500: '#3b82f6',
                 600: '#2563eb',
                 700: '#1d4ed8',
+                800: '#1e40af',
                 900: '#1e3a8a',
               },
-              brand: '#3b82f6', // Changed to a clean blue for ShopNcarT
+              brand: '#3b82f6', 
             }
           }
         }
@@ -32,9 +36,18 @@
         -ms-overflow-style: none;
         scrollbar-width: none;
       }
-      /* Custom active state for buttons */
       .active\:scale-95:active {
         transform: scale(0.95);
+      }
+      .custom-scrollbar::-webkit-scrollbar {
+        width: 6px;
+      }
+      .custom-scrollbar::-webkit-scrollbar-track {
+        background: #f1f1f1;
+      }
+      .custom-scrollbar::-webkit-scrollbar-thumb {
+        background: #ddd;
+        border-radius: 10px;
       }
     </style>
 <script type="importmap">
@@ -46,9 +59,7 @@
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
     "react/": "https://aistudiocdn.com/react@^19.2.1/",
     "react": "https://aistudiocdn.com/react@^19.2.1",
-    "aws-amplify": "https://esm.sh/aws-amplify@6",
-    "aws-amplify/auth": "https://esm.sh/aws-amplify@6/auth",
-    "aws-amplify/": "https://esm.sh/aws-amplify@^6.15.9/"
+    "@supabase/supabase-js": "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm"
   }
 }
 </script>
